--- a/index.html
+++ b/index.html
@@ -1,41 +1,43 @@
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Immo - Property Management</title>
-
-    <!-- Police -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;800&display=swap"
-      rel="stylesheet"
-    />
-
-    <!-- Tailwind CSS -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&display=swap" rel="stylesheet">
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
       tailwind.config = {
         theme: {
           extend: {
             fontFamily: {
-              sans: ["Montserrat", "sans-serif"],
+              sans: ['Poppins', 'sans-serif'],
             },
             colors: {
-              "brand-red": "#dc2626",
-              "brand-red-dark": "#b91c1c",
-              "brand-gray": "#4b5563",
-              "brand-dark": "#1f2937",
-            },
-          },
-        },
-      };
+              'brand-red': '#d40026', // Updated to match residenceetudiante.fr
+              'brand-red-dark': '#b30020', // Darker shade for hover effects
+              'brand-gray': '#4b5563',
+              'brand-dark': '#1f2937',
+            }
+          }
+        }
+      }
     </script>
-  </head>
-
+  <script type="importmap">
+{
+  "imports": {
+    "react/": "https://aistudiocdn.com/react@^19.2.0/",
+    "react": "https://aistudiocdn.com/react@^19.2.0",
+    "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/"
+  }
+}
+</script>
+</head>
   <body class="bg-gray-50">
     <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
+    <script type="module" src="/index.tsx"></script>
   </body>
 </html>
