Mise à jour du projet My-Immo

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
         }
       }
     </script>
+    <script src="https://api.monetbil.com/widget/v2/monetbil.min.js"></script>
   <script type="importmap">
 {
   "imports": {
