--- a/index.html
+++ b/index.html
@@ -54,7 +54,9 @@
     "react/": "https://esm.sh/react@18.2.0/",
     "react-dom/": "https://esm.sh/react-dom@18.2.0/",
     "appwrite": "https://esm.sh/appwrite@15.0.0",
-    "firebase/": "https://aistudiocdn.com/firebase@^12.5.0/"
+    "react-router-dom": "https://aistudiocdn.com/react-router-dom@^7.9.5",
+    "vite": "https://aistudiocdn.com/vite@^7.1.12",
+    "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.1.0"
   }
 }
 </script>
