--- a/index.html
+++ b/index.html
@@ -45,7 +45,6 @@
         }
       }
     </script>
-    <script src="https://api.monetbil.com/widget/v2/monetbil.min.js"></script>
   <script type="importmap">
 {
   "imports": {
@@ -53,13 +52,14 @@
     "react-dom/client": "https://esm.sh/react-dom@18.2.0/client",
     "react/": "https://esm.sh/react@18.2.0/",
     "react-dom/": "https://esm.sh/react-dom@18.2.0/",
-    "appwrite": "https://esm.sh/appwrite@15.0.0",
     "react-router-dom": "https://aistudiocdn.com/react-router-dom@^7.9.5",
     "vite": "https://aistudiocdn.com/vite@^7.1.12",
+    "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@2",
     "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.1.0"
   }
 }
 </script>
+<link rel="stylesheet" href="/index.css">
 </head>
   <body class="bg-brand-dark text-gray-200">
     <div id="root"></div>
