Mise à jour du code ou correctifs

--- a/index.html
+++ b/index.html
@@ -55,14 +55,16 @@
     "react-router-dom": "https://aistudiocdn.com/react-router-dom@^7.9.5",
     "vite": "https://aistudiocdn.com/vite@^7.1.12",
     "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@2",
-    "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.1.0"
+    "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.1.0",
+    "@vercel/speed-insights/react": "https://esm.sh/@vercel/speed-insights@1/react",
+    "@vercel/speed-insights/": "https://aistudiocdn.com/@vercel/speed-insights@^1.2.0/"
   }
 }
 </script>
-<link rel="stylesheet" href="/index.css">
 </head>
   <body class="bg-brand-dark text-gray-200">
     <div id="root"></div>
     <script type="module" src="/index.tsx"></script>
+    <script type="text/javascript" src="https://fr.monetbil.com/widget/v2/monetbil.min.js"></script>
   </body>
 </html>
