--- a/index.html
+++ b/index.html
@@ -52,19 +52,15 @@
     "react-dom/client": "https://esm.sh/react-dom@18.2.0/client",
     "react/": "https://esm.sh/react@18.2.0/",
     "react-dom/": "https://esm.sh/react-dom@18.2.0/",
-    "react-router-dom": "https://aistudiocdn.com/react-router-dom@^7.9.5",
-    "vite": "https://aistudiocdn.com/vite@^7.1.12",
     "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@2",
-    "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.1.0",
-    "@vercel/speed-insights/react": "https://esm.sh/@vercel/speed-insights@1/react",
-    "@vercel/speed-insights/": "https://aistudiocdn.com/@vercel/speed-insights@^1.2.0/"
+    "@vercel/speed-insights/react": "https://esm.sh/@vercel/speed-insights@1/react"
   }
 }
 </script>
 </head>
   <body class="bg-brand-dark text-gray-200">
-    <div id="root"></div>
+    <div id="root"></div> 
     <script type="module" src="/index.tsx"></script>
-    <script type="text/javascript" src="https://fr.monetbil.com/widget/v2/monetbil.min.js"></script>
+    <script type="text/javascript" src="https://fr.monetbil.com/widget/v2.1/monetbil.min.js"></script>
   </body>
 </html>
