--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
     "react-dom/client": "https://esm.sh/react-dom@18.2.0/client",
     "react/": "https://esm.sh/react@18.2.0/",
     "react-dom/": "https://esm.sh/react-dom@18.2.0/",
-    "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@2",
-    "@vercel/speed-insights/react": "https://esm.sh/@vercel/speed-insights@1/react"
+    "react/jsx-runtime": "https://esm.sh/react@18.2.0/jsx-runtime",
+    "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@2"
   }
 }
 </script>
@@ -61,6 +61,5 @@
   <body class="bg-brand-dark text-gray-200">
     <div id="root"></div> 
     <script type="module" src="/index.tsx"></script>
-    <script type="text/javascript" src="https://fr.monetbil.com/widget/v2.1/monetbil.min.js"></script>
   </body>
 </html>
